--- a/ProfileBook/ProfileBook.Android/ProfileBook.Android.csproj
+++ b/ProfileBook/ProfileBook.Android/ProfileBook.Android.csproj
@@ -57,6 +57,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.475</Version>
     </PackageReference>
+    <PackageReference Include="Prism.Plugin.Popups">
+      <Version>7.2.0.1046</Version>
+    </PackageReference>
     <PackageReference Include="Prism.Unity.Forms">
       <Version>8.0.0.1909</Version>
     </PackageReference>
